added ajax/sosp/cors/csrf to the index

--- a/index.html
+++ b/index.html
@@ -74,6 +74,11 @@ ul.inline-list li {
 						<div class='thumb'></div>
 						GTG + Hamster
 					</a></li>
+
+					<li><a href='ajax-sosp-cors-csrf.html'>
+						<div class='thumb' style='background-image:url("_images/ajax-sosp-cors-csrf.png")'></div>
+						AJAX/SOSP/CORS/CSRF
+					</a></li>
 				</ul>
 			</div>
 		</div>
